# editorBot

./: .env.example  .gitignore  CLI_QUICK_REFERENCE.md  CLI_SIMULATION_IMPLEMENTATION.md  CLI_SIMULATION_README.md  DEPLOYMENT_GUIDE.md  Dockerfile  EXECUTION_AUDIT.md  IMPLEMENTATION_SUMMARY.md  README.md  RENDER_PLAN_INTEGRATION.md  STRUCTURED_LOGGING.md  audit.py  docker-compose.yml  editorbot-cli  pyproject.toml  quick_cli_test.py  quick_test.py  requirements-dev.txt  requirements.txt  setup.sh  test_template_module.py
Bot/: bot.py
Bot/handlers/: text.py  voice.py
Bot/services/: mediation.py  transcription.py
Bot/state/: machine.py  store.py
bot/: __init__.py  bot.py  logging.py
bot/cli/: README.md  SIMULATION_GUIDE.md  __init__.py  __main__.py  commands.py  inspector.py  main.py  simulate  simulate_full_workflow.py  simulator.py
bot/graph/: __init__.py  feature_flag.py  graph.py  nodes.py  state.py
bot/handlers/: callbacks.py  commands.py  render_plan.py  text.py  voice.py
bot/render_plan/: __init__.py  builder.py  models.py  serializer.py  validator.py
bot/services/: __init__.py  script_generation.py  transcription.py
bot/state/: __init__.py  machine.py  machine_refactored.py  models.py  runtime.py  store.py
bot/templates/: __init__.py  cache.py  client.py  models.py  validator.py
sandbox/: .gitignore  CLI_FIXES.md  QUICK_TEST.md  README.md
scripts/: test_transcribe.py
tests/: test_langgraph_integration.py  test_mediation_service.py  test_state_machine.py  test_template_integration.py  test_transcription_errors.py
(+9 files in other folders)
